Progress so far:

--- a/scss/default.scss
+++ b/scss/default.scss
@@ -1,18 +1,19 @@
 // Import all scss moove files.
-@import "moove/transitions";
-@import "moove/variables";
-@import "moove/general";
-@import "moove/pages";
-@import "moove/blocks";
-@import "moove/drawers";
-@import "moove/navbar";
-@import "moove/footer";
-@import "moove/breadcrumb";
-@import "moove/course";
-@import "moove/mixins/accessibilityfontsize";
-@import "moove/accessibilitybar";
-@import "moove/accessibilitystyles";
-@import "moove/login";
-@import "moove/mydashboard";
-@import "moove/frontpage";
-@import "moove/profile";
+@import "pbs/transitions";
+@import "pbs/variables";
+@import "pbs/general";
+@import "pbs/pages";
+@import "pbs/blocks";
+@import "pbs/drawers";
+@import "pbs/navbar";
+@import "pbs/footer";
+@import "pbs/breadcrumb";
+@import "pbs/course";
+// @import "moove/mixins/accessibilityfontsize";
+// @import "moove/accessibilitybar";
+// @import "moove/accessibilitystyles";
+@import "pbs/login";
+@import "pbs/mydashboard";
+@import "pbs/frontpage";
+@import "pbs/profile";
+@import "pbs/dropdown";
