--- a/scss/pbs/_footer.scss
+++ b/scss/pbs/_footer.scss
@@ -56,6 +56,7 @@
 
                     &.website {
                         background-color: $brand-primary;
+
                         &:hover {
                             background-color: darken($brand-primary, 20%);
                         }
@@ -63,6 +64,7 @@
 
                     &.mobile {
                         background-color: $brand-primary;
+
                         &:hover {
                             background-color: darken($brand-primary, 20%);
                         }
@@ -70,6 +72,7 @@
 
                     &.mail {
                         background-color: $brand-primary;
+
                         &:hover {
                             background-color: darken($brand-primary, 20%);
                         }
@@ -77,6 +80,7 @@
 
                     &.facebook {
                         background-color: $facebook-color;
+
                         &:hover {
                             background-color: darken($facebook-color, 20%);
                         }
@@ -84,6 +88,7 @@
 
                     &.twitter {
                         background-color: $twitter-color;
+
                         &:hover {
                             background-color: darken($twitter-color, 20%);
                         }
@@ -91,6 +96,7 @@
 
                     &.linkedin {
                         background-color: $linkedin-color;
+
                         &:hover {
                             background-color: darken($linkedin-color, 20%);
                         }
@@ -98,6 +104,7 @@
 
                     &.youtube {
                         background-color: $youtube-color;
+
                         &:hover {
                             background-color: darken($youtube-color, 20%);
                         }
@@ -105,6 +112,7 @@
 
                     &.instagram {
                         background-color: $instagram-color;
+
                         &:hover {
                             background-color: darken($instagram-color, 20%);
                         }
@@ -112,6 +120,7 @@
 
                     &.whatsapp {
                         background-color: $whatsapp-color;
+
                         &:hover {
                             background-color: darken($whatsapp-color, 20%);
                         }
@@ -135,7 +144,7 @@
 
     .supportemail,
     .logininfo,
-    .tool_dataprivacy{
+    .tool_dataprivacy {
         margin: .5rem 0;
     }
 
@@ -158,7 +167,7 @@
     }
 
     .copyright {
-        background-color: $moodle-color;
+        background-color: $black;
         text-align: center;
         min-height: inherit;
         color: #fff;
@@ -180,6 +189,7 @@
 
 @include media-breakpoint-down(sm) {
     #page-footer {
+
         .column-right,
         .column-left {
             text-align: center;
@@ -191,4 +201,3 @@
         }
     }
 }
-
