--- a/scss/pbs/_general.scss
+++ b/scss/pbs/_general.scss
@@ -1,5 +1,6 @@
 body {
-    background-color: $background !important; /* stylelint-disable-line */
+    background-color: $background !important;
+    /* stylelint-disable-line */
 }
 
 #page-header {
@@ -23,7 +24,7 @@ body {
     }
 }
 
-.moove-container-fluid {
+.pbs-container-fluid {
     padding: 0;
     width: 100%;
     margin-right: auto;
@@ -36,7 +37,7 @@ body {
     box-shadow: 0 0 35px 0 rgba(154, 161, 171, 0.15);
 }
 
-.moove-container-fluid,
+.pbs-container-fluid,
 .container-fluid {
     max-width: 85%;
     padding-right: 15px;
@@ -65,11 +66,16 @@ a {
     box-shadow: 0 0.375rem 1.5rem 0 rgb(140 152 164 / 13%) !important;
 }
 
+#page-wrapper #page {
+    flex-grow: 1;
+}
+
 @include media-breakpoint-up(md) {
+
     .pagelayout-standard #page.drawers .main-inner,
     body.limitedwidth #page.drawers .main-inner,
     #page.drawers .main-inner,
-    .moove-container-fluid,
+    .pbs-container-fluid,
     .container-fluid,
     .container-lg,
     .container-md,
@@ -89,10 +95,11 @@ a {
 }
 
 @include media-breakpoint-down(md) {
+
     .pagelayout-standard #page.drawers .main-inner,
     body.limitedwidth #page.drawers .main-inner,
     #page.drawers .main-inner,
-    .moove-container-fluid,
+    .pbs-container-fluid,
     .container-fluid,
     .container-lg,
     .container-md,
