--- a/scss/pbs/_mydashboard.scss
+++ b/scss/pbs/_mydashboard.scss
@@ -20,15 +20,16 @@
 }
 
 #page-my-index.page-mycourses {
-    .header-actions-container .header-action .btn-group > .btn:not(:last-child):not(.dropdown-toggle) {
-        background-color: $brand-primary;
+    .header-actions-container .header-action .btn-group>.btn:not(:last-child):not(.dropdown-toggle) {
+        background-color: $gray-200;
+        color: $black;
 
         &:hover {
-            background-color: darken($brand-primary, 10%);
+            background-color: darken($gray-200, 10%);
         }
 
         .text-dark {
-            color: #fff !important;
+            color: $black !important;
         }
     }
 }
