--- a/scss/pbs/_navbar.scss
+++ b/scss/pbs/_navbar.scss
@@ -21,52 +21,36 @@
 }
 
 .secondary-navigation {
-    border: none;
     align-items: stretch;
     padding-top: 0;
     padding-bottom: 0;
     z-index: 1021;
-    background-color: $secondary-menu-color;
-    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.5));
-    position: fixed;
-    top: 70px;
 
-    > .moove-container-fluid {
-        padding: 0;
-    }
 
-    &.moove {
-        width: 100%;
-        max-width: 100% !important;
-    }
-
-    .moremenu {
-        box-shadow: none;
+    .navigation {
         background-color: inherit;
-        border-top: none;
-        border-bottom: none;
         height: 60px;
+        border-top: 1px solid $brand-primary;
+        border-bottom: 1px solid $brand-primary;
+        width: 100%;
+        max-width: 100%;
 
         .nav-tabs {
-            border: none;
             background-color: inherit;
 
             .nav-link {
                 display: flex;
                 align-items: center;
                 white-space: nowrap;
-                color: #fff;
-                border: none;
                 border-radius: 0;
 
                 &.active {
-                    border-bottom: 2px solid #fff;
                     font-weight: 700;
                 }
 
                 &:hover,
                 &:focus {
-                    background-color: darken($brand-primary, 10%);
+                    border-bottom-color: $brand-primary;
                 }
             }
         }
