--- a/scss/pbs/_variables.scss
+++ b/scss/pbs/_variables.scss
@@ -1,7 +1,13 @@
 $brand-primary: #0f47ad !default;
 $green: #64a44e !default;
 $gold: #f7bf29 !default;
+$black: #000000 !default;
 $background: #f2f3f7;
+
+$gray-200: #e5e7eb;
+$gray-300: #d1d5db;
+$gray-400: #9ca3af;
+$gray-700: #374151;
 
 $secondary-menu-color: $brand-primary !default;
 
