Design changes to course

--- a/templates/block_myoverview/view-cards.mustache
+++ b/templates/block_myoverview/view-cards.mustache
@@ -38,7 +38,7 @@
 
 {{< core_course/coursecards }}
     {{$menu}}
-        <div class="card-footer dashboard-card-footer menu border-0 bg-white ml-auto">
+        <div class="menu border-0 ml-auto">
             {{> block_myoverview/course-action-menu }}
         </div>
     {{/menu}}
