--- a/scss/pbs/_frontpage.scss
+++ b/scss/pbs/_frontpage.scss
@@ -1,3 +1,6 @@
+.relative {
+    position: relative;
+}
 .pagelayout-frontpage,
 .pagelayout-coursecategory {
     .dashboard-card {
@@ -6,17 +9,13 @@
         margin: 1rem;
 
         .dashboard-card-footer {
-            border-radius: .5rem;
-        }
-
-        .card-body {
-            padding: .8rem;
+            border-radius: 0.5rem;
         }
 
         .customfields {
             .customfield {
                 font-size: 80%;
-                margin-bottom: .25rem;
+                margin-bottom: 0.25rem;
 
                 &:last-of-type {
                     margin-bottom: 0;
@@ -38,7 +37,7 @@
                 padding: 4px 8px;
                 background-color: #fff;
                 color: $brand-primary;
-                border-radius: .5rem;
+                border-radius: 0.5rem;
                 margin: 0 4px;
 
                 .icon {
@@ -48,13 +47,11 @@
         }
 
         .course-contacts {
-            padding: 0 0.8rem 0.8rem 0.8rem;
-
             .contact {
                 display: flex;
 
                 &:not(:first-of-type) {
-                    margin-top: .4rem;
+                    margin-top: 0.4rem;
                 }
 
                 img {
@@ -64,7 +61,7 @@
                 }
 
                 p {
-                    margin-left: .4rem;
+                    margin-left: 0.4rem;
                     margin-bottom: 0;
 
                     &.role {
@@ -76,7 +73,7 @@
         }
 
         .dashboard-card-footer {
-            padding: 0 .8rem .8rem .8rem;
+            padding: 0 0.8rem 0.8rem 0.8rem;
         }
     }
 }
@@ -88,7 +85,7 @@
         padding: 0;
 
         .carousel-inner {
-            border-radius: .5rem;
+            border-radius: 0.5rem;
         }
 
         .caption {
@@ -96,44 +93,44 @@
         }
 
         .carousel-indicators {
-            background-color: rgba(0, 0, 0, .6);
+            background-color: rgba(0, 0, 0, 0.6);
             margin-bottom: 15px;
             height: 20px;
-            border-bottom-left-radius: .5rem;
-            border-bottom-right-radius: .5rem;
+            border-bottom-left-radius: 0.5rem;
+            border-bottom-right-radius: 0.5rem;
         }
 
         .carousel-caption {
-            background-color: rgba(0, 0, 0, .6);
+            background-color: rgba(0, 0, 0, 0.6);
             margin: 0;
             bottom: 35px;
             padding: 15px;
-            border-top-left-radius: .5rem;
-            border-top-right-radius: .5rem;
+            border-top-left-radius: 0.5rem;
+            border-top-right-radius: 0.5rem;
         }
 
         .carousel-fade .carousel-item {
             opacity: 0;
-            transition-duration: .6s;
+            transition-duration: 0.6s;
             transition-property: opacity;
         }
 
-        .carousel-fade  .carousel-item.active,
-        .carousel-fade  .carousel-item-next.carousel-item-left,
-        .carousel-fade  .carousel-item-prev.carousel-item-right {
+        .carousel-fade .carousel-item.active,
+        .carousel-fade .carousel-item-next.carousel-item-left,
+        .carousel-fade .carousel-item-prev.carousel-item-right {
             opacity: 1;
         }
 
         .carousel-fade .active.carousel-item-left,
-        .carousel-fade  .active.carousel-item-right {
+        .carousel-fade .active.carousel-item-right {
             opacity: 0;
         }
 
-        .carousel-fade  .carousel-item-next,
+        .carousel-fade .carousel-item-next,
         .carousel-fade .carousel-item-prev,
         .carousel-fade .carousel-item.active,
         .carousel-fade .active.carousel-item-left,
-        .carousel-fade  .active.carousel-item-prev {
+        .carousel-fade .active.carousel-item-prev {
             transform: translateX(0);
             transform: translate3d(0, 0, 0);
         }
@@ -230,7 +227,7 @@
 
         #frontpage-available-course-list {
             h2 {
-                text-align: center;;
+                text-align: center;
             }
         }
     }
@@ -248,7 +245,7 @@
 
             .card {
                 margin-top: 1rem;
-                border-radius: .5rem;
+                border-radius: 0.5rem;
 
                 &:first-of-type {
                     margin-top: 0;
