--- a/scss/pbs/_mydashboard.scss
+++ b/scss/pbs/_mydashboard.scss
@@ -2,7 +2,7 @@
     .card {
         -webkit-box-shadow: none;
         box-shadow: none;
-        border-radius: .5rem;
+        border-radius: 0.5rem;
     }
 
     #block-region-content {
@@ -20,7 +20,20 @@
 }
 
 #page-my-index.page-mycourses {
-    .header-actions-container .header-action .btn-group>.btn:not(:last-child):not(.dropdown-toggle) {
+    .pbs-container-fluid {
+        .header-action {
+            margin-bottom: 1rem;
+            display: flex;
+            justify-content: end;
+            .course-manage-btns {
+                padding-right: 0.25rem;
+            }
+        }
+    }
+    .header-actions-container
+        .header-action
+        .btn-group
+        > .btn:not(:last-child):not(.dropdown-toggle) {
         background-color: $gray-200;
         color: $black;
 
